--- a/employeeservice/pom.xml
+++ b/employeeservice/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>commonservice</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-spring-boot-starter</artifactId>
+            <version>4.9.3</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
