--- a/employeeservice/pom.xml
+++ b/employeeservice/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.booklibrary</groupId>
             <artifactId>commonservice</artifactId>
             <version>0.0.1-SNAPSHOT</version>
